// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleHeadline renders correctly with authors and links 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-5:not(:last-child) {
  margin-right: 10px;
}

.emotion-5:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

.emotion-4 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-4 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:visited:not(:disabled) {
  color: #903D91;
}

.emotion-4:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-4 {
    vertical-align: text-bottom;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

.emotion-1 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<div>
    <ul
      class="emotion-12"
    >
      <li
        class="emotion-5"
      >
        <a
          aria-label="Posts by Jane Smith"
          class="emotion-4"
          data-author="Jane Smith"
          href="www.example.com"
          rel="author"
          title="Posts by Jane Smith"
        >
          <span
            class="emotion-3"
          >
            <span
              class="emotion-0"
            >
              Jane Smith
            </span>
            <span
              class="emotion-0"
            >
              <svg
                aria-labelledby="mock-bui-1"
                class="emotion-1"
                viewBox="0 0 24 24"
              >
                <title
                  id="mock-bui-1"
                >
                  External link
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
        </a>
      </li>
      <li
        class="emotion-5"
      >
        <a
          aria-label="Posts by John Smith"
          class="emotion-4"
          data-author="John Smith"
          href="www.example.com"
          rel="author"
          title="Posts by John Smith"
        >
          <span
            class="emotion-3"
          >
            <span
              class="emotion-0"
            >
              John Smith
            </span>
            <span
              class="emotion-0"
            >
              <svg
                aria-labelledby="mock-bui-1"
                class="emotion-1"
                viewBox="0 0 24 24"
              >
                <title
                  id="mock-bui-1"
                >
                  External link
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with authors and titles 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-0:not(:last-child) {
  margin-right: 10px;
}

.emotion-0:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

<div>
    <ul
      class="emotion-2"
    >
      <li
        class="emotion-0"
      >
        <span>
          Jane Smith
        </span>
        <span>
          , Author
        </span>
      </li>
      <li
        class="emotion-0"
      >
        <span>
          John Smith
        </span>
        <span>
          , Other Author
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with authors, location, titles and links 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-5:not(:last-child) {
  margin-right: 10px;
}

.emotion-5:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

.emotion-4 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-4 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:visited:not(:disabled) {
  color: #903D91;
}

.emotion-4:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-4 {
    vertical-align: text-bottom;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

.emotion-1 {
  fill: #535353;
  color: #535353;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<div>
    <ul
      class="emotion-12"
    >
      <li
        class="emotion-5"
      >
        <a
          aria-label="Posts by Jane Smith"
          class="emotion-4"
          data-author="Jane Smith"
          href="www.example.com"
          rel="author"
          title="Posts by Jane Smith"
        >
          <span
            class="emotion-3"
          >
            <span
              class="emotion-0"
            >
              Jane Smith
            </span>
            <span
              class="emotion-0"
            >
              <svg
                aria-labelledby="mock-bui-1"
                class="emotion-1"
                viewBox="0 0 24 24"
              >
                <title
                  id="mock-bui-1"
                >
                  External link
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
        </a>
        <span>
          , Author
        </span>
        <span>
          , London
        </span>
      </li>
      <li
        class="emotion-5"
      >
        <a
          aria-label="Posts by John Smith"
          class="emotion-4"
          data-author="John Smith"
          href="www.example.com"
          rel="author"
          title="Posts by John Smith"
        >
          <span
            class="emotion-3"
          >
            <span
              class="emotion-0"
            >
              John Smith
            </span>
            <span
              class="emotion-0"
            >
              <svg
                aria-labelledby="mock-bui-1"
                class="emotion-1"
                viewBox="0 0 24 24"
              >
                <title
                  id="mock-bui-1"
                >
                  External link
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
        </a>
        <span>
          , Other Author
        </span>
        <span>
          , London
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with multiple authors 1`] = `
<DocumentFragment>
  .emotion-3 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-0:not(:last-child) {
  margin-right: 10px;
}

.emotion-0:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

<div>
    <ul
      class="emotion-3"
    >
      <li
        class="emotion-0"
      >
        <span>
          Jane Smith
        </span>
      </li>
      <li
        class="emotion-0"
      >
        <span>
          John Smith
        </span>
      </li>
      <li
        class="emotion-0"
      >
        <span>
          Sam Smith
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with one authors 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-0:not(:last-child) {
  margin-right: 10px;
}

.emotion-0:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

<div>
    <ul
      class="emotion-1"
    >
      <li
        class="emotion-0"
      >
        <span>
          Jane Smith
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
